format all code, fix/suppress most warnings